--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div>tests</div>
-    <script src="/js/index.js" type="module"></script>
-    <script src="./js/variables.js" type="modules"></script>
+    <script src="./index.js" type="module"></script>
+    <!-- <script src="./js/variables.js" type="modules"></script> -->
   </body>
 </html>
